<!-- HarleyDroid: Harley Davidson J1850 Data Analyser for Android.

     Copyright (C) 2010-2012 Stelian Pop <stelian@popies.net>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/startstop_menu"
          android:icon="@drawable/ic_menu_play_clip"
          android:title="@string/connect_label"
	  android:showAsAction="ifRoom" />
    <item android:id="@+id/mode_menu"
          android:icon="@drawable/ic_menu_info_details"
          android:title="@string/mode_labelraw"
	  android:showAsAction="ifRoom" />
    <item android:id="@+id/diag_menu"
          android:icon="@drawable/ic_menu_diag"
          android:title="@string/diag_label"
	  android:showAsAction="ifRoom" />
    <item android:id="@+id/reset_menu"
          android:icon="@drawable/ic_menu_clear_playlist"
          android:title="@string/resetcounters_label" />
    <item android:id="@+id/preferences_menu"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/preferences_label" />
    <item android:id="@+id/about_menu"
          android:icon="@drawable/ic_menu_help"
          android:title="@string/about_label" />
</menu>

