<?xml version="1.0" encoding="utf-8"?>

<!-- HarleyDroid: Harley Davidson J1850 Data Analyser for Android.

     Copyright (C) 2010-2012 Stelian Pop <stelian@popies.net>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/text_layout"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:stretchColumns="1"
    	>
		<TableRow>
		<TextView
			android:id="@+id/rpm_label"
    		android:text="@string/rpm_label"
    		android:padding="3dip"
    		/>
		<TextView
			android:id="@+id/rpm_field"
			android:padding="3dip"
    		/>
		</TableRow>
		<TableRow>
		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/speed_metric_label"
    			android:text="@string/speed_metric_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:padding="3dip"
    			/>
    		<TextView
				android:id="@+id/speed_imperial_label"
    			android:text="@string/speed_imperial_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:padding="3dip"
    			android:visibility="gone"
    			/>
    	</FrameLayout>
    	<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/speed_metric_field"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="3dip"
    			/>
    		<TextView
				android:id="@+id/speed_imperial_field"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="3dip"
				android:visibility="gone"
    			/>
    	</FrameLayout>
		</TableRow>
		<TableRow>
		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/enginetemp_metric_label"
    			android:text="@string/enginetemp_metric_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:padding="3dip"
    			/>
    		<TextView
				android:id="@+id/enginetemp_imperial_label"
    			android:text="@string/enginetemp_imperial_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:padding="3dip"
    			android:visibility="gone"
    			/>
    	</FrameLayout>
    	<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/enginetemp_metric_field"
				android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
				android:padding="3dip"
    			/>
    		<TextView
				android:id="@+id/enginetemp_imperial_field"
				android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
				android:padding="3dip"
				android:visibility="gone"
    			/>
    	</FrameLayout>
		</TableRow>
		<TableRow>
		<TextView
			android:id="@+id/fuelgauge_label"
    		android:text="@string/fuelgauge_label"
    		android:padding="3dip"
    		/>
		<TextView
			android:id="@+id/fuelgauge_field"
			android:padding="3dip"
    		/>
		</TableRow>
		<TableRow>
		<TextView
			android:id="@+id/turnsignals_label"
    		android:text="@string/turnsignals_label"
		    android:padding="3dip"
    		/>
		<TextView
			android:id="@+id/turnsignals_field"
			android:padding="3dip"
    		/>
		</TableRow>
		<TableRow>
		<TextView
			android:id="@+id/neutral_label"
    		android:text="@string/neutral_label"
    		android:padding="3dip"
    		/>
		<TextView
			android:id="@+id/neutral_field"
			android:padding="3dip"
    		/>
		</TableRow>
		<TableRow>
		<TextView
			android:id="@+id/clutch_label"
    		android:text="@string/clutch_label"
    		android:padding="3dip"
    		/>
		<TextView
			android:id="@+id/clutch_field"
			android:padding="3dip"
    		/>
		</TableRow>
		<TableRow>
		<TextView
			android:id="@+id/gear_label"
		    android:text="@string/gear_label"
    		android:padding="3dip"
    		/>
		<TextView
			android:id="@+id/gear_field"
			android:padding="3dip"
    		/>
		</TableRow>
		<TableRow>
		<TextView
			android:id="@+id/checkengine_label"
    		android:text="@string/checkengine_label"
    		android:padding="3dip"
    		/>
		<TextView
			android:id="@+id/checkengine_field"
			android:padding="3dip"
    		/>
		</TableRow>
		<TableRow>
		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/odometer_metric_label"
    			android:text="@string/odometer_metric_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
	    		android:padding="3dip"
    			/>
    		<TextView
				android:id="@+id/odometer_imperial_label"
    			android:text="@string/odometer_imperial_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
	    		android:padding="3dip"
	    		android:visibility="gone"
    			/>
    	</FrameLayout>
    	<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/odometer_metric_field"
				android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
				android:padding="3dip"
		    	/>
		    <TextView
				android:id="@+id/odometer_imperial_field"
				android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
				android:padding="3dip"
				android:visibility="gone"
		    	/>
		</FrameLayout>
		</TableRow>
		<TableRow>
		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/fuel_metric_label"
    			android:text="@string/fuel_metric_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:padding="3dip"
    			/>
    		<TextView
				android:id="@+id/fuel_imperial_label"
    			android:text="@string/fuel_imperial_label"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:padding="3dip"
    			android:visibility="gone"
    			/>
    	</FrameLayout>
    	<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:id="@+id/fuel_metric_field"
				android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
				android:padding="3dip"
    			/>
    		<TextView
				android:id="@+id/fuel_imperial_field"
				android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
				android:padding="3dip"
				android:visibility="gone"
    			/>
    	</FrameLayout>
		</TableRow>
	</TableLayout>

