<?xml version="1.0" encoding="utf-8"?>
<!--
     HarleyDroid: Harley Davidson J1850 Data Analyser for Android.

     Copyright (C) 2010-2012 Stelian Pop <stelian@popies.net>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/diag_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/diag1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="1" >

        <TableRow android:layout_weight="1" >

            <TextView
                android:id="@+id/vin_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/vin_label"
                android:textSize="@dimen/textsize" />

            <Button
                android:id="@+id/vin_field"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:textSize="@dimen/textsize" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <TextView
                android:id="@+id/ecmpn_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/ecmpn_label"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/ecmpn_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:textSize="@dimen/textsize" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <TextView
                android:id="@+id/ecmcalid_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/ecmcalid_label"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/ecmcalid_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:textSize="@dimen/textsize" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <TextView
                android:id="@+id/ecmswlevel_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/ecmswlevel_label"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/ecmswlevel_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:textSize="@dimen/textsize" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dtc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/currentdtc_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/currentdtc_label"
            android:textSize="@dimen/textsize" />

        <ListView
            android:id="@+id/currentdtc_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </ListView>

        <TextView
            android:id="@+id/historicdtc_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/historicdtc_label"
            android:textSize="@dimen/textsize" />

        <ListView
            android:id="@+id/historicdtc_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </ListView>
    </LinearLayout>

</LinearLayout>
